3B - update admin setting icon + frontend

--- a/3B-NEW/index.html
+++ b/3B-NEW/index.html
@@ -444,6 +444,7 @@
 				<div class="admin">
 					<ul>
 						<li><a href="buyer-cancel-account.html">Delete Account</a></li>
+						<li><a href="admin-setting-icon-category.html">Admin Setting Icon Category</a></li>
 					</ul>
 				</div>				
 			</div>
