--- a/3B-WEB/NEW_DESIGN/mobile/home.html
+++ b/3B-WEB/NEW_DESIGN/mobile/home.html
@@ -288,8 +288,8 @@
 							<ul>
 								<li>
 									<a href="#">
-										<img src="../../assets/images/new-design/icons/gio-vang.png">
-										<span>Giờ vàng</span>
+										<img src="../../assets/images/new-design/icons-category/sale-off.png">
+										<span>Sale off</span>
 									</a>
 								</li>
 								<li>
