--- a/3B-WEB/NEW_DESIGN/pc/home.html
+++ b/3B-WEB/NEW_DESIGN/pc/home.html
@@ -386,9 +386,9 @@
 								<ul>
 									<li>
 										<a href="#">
-											<img src="../../assets/images/new-design/icons/gio-vang.png">
+											<img src="../../assets/images/new-design/icons/saleoff.png">
 											<!-- <div class="icon gio-vang"><img src="../../assets/images/new-design/icons-svg/gio-vang.svg"></div> -->
-											<span>Giờ vàng</span>
+											<span>Sale off</span>
 										</a>
 									</li>
 									<li>
