3B - update admin setting icon category

--- a/3B-NEW/admin-setting-icon-category.html
+++ b/3B-NEW/admin-setting-icon-category.html
@@ -388,11 +388,16 @@
 						<div class="box-header">
 							<h3 class="box-title">
 								Setting hiển thị icon category ở homepage
-							</h3>
+							</h3>							
 						</div>
 						<!-- BEGIN BOX BODY -->
 						<div class="box-body">
 							<div class="row">
+								<div class="col-md-6 margin-b">
+									<a href="#" class="btn btn-flat btn-danger">Thêm mục</a>
+								</div>
+								<div class="clearfix"></div>
+
 								<div class="col-md-10">
 									<!-- BEGIN TABLE WARRANTY -->
 									<div class="table-responsive">
