3B - update mobile front end

--- a/3B-WEB/NEW_DESIGN/mobile/home.html
+++ b/3B-WEB/NEW_DESIGN/mobile/home.html
@@ -151,6 +151,74 @@
 			</div>
 			<!-- /END ADVANCE SEARCH -->
 
+			<!-- BEGIN MENU CATEGORIES -->
+			<!-- <div class="menu-mobile container"> -->
+				<!-- <h3>Danh Mục</h3> -->
+				<ul class="menu-container scroll-x">
+					<li>
+						<a href="view-product-by-category.html">
+							<span class="frame-icon"><img src="../../assets/images/new-design/icons/cat-icon-1.png"></span>
+							Nội Thất
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<span class="frame-icon"><img src="../../assets/images/new-design/icons/cat-icon-2.png"></span>
+							Thời trang nữ
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<span class="frame-icon"><img src="../../assets/images/new-design/icons/cat-icon-3.png"></span>
+							Thời trang nam
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<span class="frame-icon"><img src="../../assets/images/new-design/icons/cat-icon-4.png"></span>
+							Đồ lót
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<span class="frame-icon"><img src="../../assets/images/new-design/icons/cat-icon-5.png"></span>
+							Mẹ và bé
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<span class="frame-icon"><img src="../../assets/images/new-design/icons/cat-icon-6.png"></span>
+							Mỹ phẩm
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<span class="frame-icon"><img src="../../assets/images/new-design/icons/cat-icon-7.png"></span>
+							Máy tính và laptop
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<span class="frame-icon"><img src="../../assets/images/new-design/icons/cat-icon-8.png"></span>
+							Phụ kiện ôtô
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<span class="frame-icon"><img src="../../assets/images/new-design/icons/cat-icon-9.png"></span>
+							Thực phẩm
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<span class="frame-icon"><img src="../../assets/images/new-design/icons/cat-icon-10.png"></span>
+							Trái cây
+						</a>
+					</li>
+				</ul>
+			<!-- </div> -->
+			<!-- /END MENU CATEGORIES -->
+			
 			<div class="banner">
 				<img src="../../assets/images/new-design/banner.jpg">
 			</div>
@@ -159,7 +227,7 @@
 				<!-- BEGIN HOTSALE TODAY -->
 				<div class="hotsale-today">
 					<div class="title pull-left">
-						<h3>Giá sốc <span><img src="../../assets/images/new-design/mobile/hotsale-today.png"></span> hôm nay</h3>
+						<h3><span><img src="../../assets/images/new-design/icons-svg/fire.svg"></span>Giờ Vàng Giá Tốt</h3>
 					</div>
 					<div class="pull-right">
 						<span class="flash-time">
@@ -181,7 +249,7 @@
 							<div class="p-info">
 								<h4 class="p-price">125,000 đ</h4>
 								<div class="p-sold">
-									<img class="progress-icon" src="../../assets/images/new-design/icons/fire.png">
+									<img class="progress-icon" src="../../assets/images/new-design/icons-svg/fire-2.svg">
 									<div class="progress">
 										<div class="progress-bar" style="width: 30%;">
 											<span class="sr-only">Đã bán: 10/30</span>
@@ -198,7 +266,7 @@
 							<div class="p-info">
 								<h4 class="p-price">800,000đ - 1,000,000đ</h4>
 								<div class="p-sold">
-									<img class="progress-icon" src="../../assets/images/new-design/icons/fire.png">
+									<img class="progress-icon" src="../../assets/images/new-design/icons-svg/fire-2.svg">
 									<div class="progress">
 										<div class="progress-bar" style="width: 100%;">
 											<span class="sr-only">Đã bán: 30/30</span>
@@ -215,7 +283,7 @@
 							<div class="p-info">
 								<h4 class="p-price">125,000 đ</h4>
 								<div class="p-sold">
-									<img class="progress-icon" src="../../assets/images/new-design/icons/fire.png">
+									<img class="progress-icon" src="../../assets/images/new-design/icons-svg/fire-2.svg">
 									<div class="progress">
 										<div class="progress-bar" style="width: 100%;">
 											<span class="sr-only">Đã bán: 30/30</span>
@@ -232,7 +300,7 @@
 							<div class="p-info">
 								<h4 class="p-price">125,000 đ</h4>
 								<div class="p-sold">
-									<img class="progress-icon" src="../../assets/images/new-design/icons/fire.png">
+									<img class="progress-icon" src="../../assets/images/new-design/icons-svg/fire-2.svg">
 									<div class="progress">
 										<div class="progress-bar" style="width: 0%;">
 											<span class="sr-only">Đã bán: 0/30</span>
@@ -249,7 +317,7 @@
 							<div class="p-info">
 								<h4 class="p-price">80,000đ - 100,000đ</h4>
 								<div class="p-sold">
-									<img class="progress-icon" src="../../assets/images/new-design/icons/fire.png">
+									<img class="progress-icon" src="../../assets/images/new-design/icons-svg/fire-2.svg">
 									<div class="progress">
 										<div class="progress-bar" style="width: 60%;">
 											<span class="sr-only">Đã bán: 16/30</span>
@@ -266,7 +334,7 @@
 							<div class="p-info">
 								<h4 class="p-price">125,000 đ</h4>
 								<div class="p-sold">
-									<img class="progress-icon" src="../../assets/images/new-design/icons/fire.png">
+									<img class="progress-icon" src="../../assets/images/new-design/icons-svg/fire-2.svg">
 									<div class="progress">
 										<div class="progress-bar" style="width: 10%;">
 											<span class="sr-only">Đã bán: 3/30</span>
@@ -363,74 +431,6 @@
 			<div class="header-bot"><button class="btn btn-view">YÊU BẾP NGHIỆN NHÀ</button></div>
 		</header>
 		<!-- /END HEADER -->
-
-		<!-- BEGIN MENU CATEGORIES -->
-		<div class="menu-mobile container">
-			<h3>Danh Mục</h3>
-			<ul class="menu-container scroll-x">
-				<li>
-					<a href="view-product-by-category.html">
-						<span class="frame-icon"><img src="../../assets/images/new-design/icons/cat-icon-1.png"></span>
-						Nội Thất
-					</a>
-				</li>
-				<li>
-					<a href="#">
-						<span class="frame-icon"><img src="../../assets/images/new-design/icons/cat-icon-2.png"></span>
-						Thời trang nữ
-					</a>
-				</li>
-				<li>
-					<a href="#">
-						<span class="frame-icon"><img src="../../assets/images/new-design/icons/cat-icon-3.png"></span>
-						Thời trang nam
-					</a>
-				</li>
-				<li>
-					<a href="#">
-						<span class="frame-icon"><img src="../../assets/images/new-design/icons/cat-icon-4.png"></span>
-						Đồ lót
-					</a>
-				</li>
-				<li>
-					<a href="#">
-						<span class="frame-icon"><img src="../../assets/images/new-design/icons/cat-icon-5.png"></span>
-						Mẹ và bé
-					</a>
-				</li>
-				<li>
-					<a href="#">
-						<span class="frame-icon"><img src="../../assets/images/new-design/icons/cat-icon-6.png"></span>
-						Mỹ phẩm
-					</a>
-				</li>
-				<li>
-					<a href="#">
-						<span class="frame-icon"><img src="../../assets/images/new-design/icons/cat-icon-7.png"></span>
-						Máy tính và laptop
-					</a>
-				</li>
-				<li>
-					<a href="#">
-						<span class="frame-icon"><img src="../../assets/images/new-design/icons/cat-icon-8.png"></span>
-						Phụ kiện ôtô
-					</a>
-				</li>
-				<li>
-					<a href="#">
-						<span class="frame-icon"><img src="../../assets/images/new-design/icons/cat-icon-9.png"></span>
-						Thực phẩm
-					</a>
-				</li>
-				<li>
-					<a href="#">
-						<span class="frame-icon"><img src="../../assets/images/new-design/icons/cat-icon-10.png"></span>
-						Trái cây
-					</a>
-				</li>
-			</ul>
-		</div>
-		<!-- /END MENU CATEGORIES -->
 
 		<!-- BEGIN FEATURED STORE -->
 		<div class="featured-store container">
