3B - MOBILE - update style mobile

--- a/3B-WEB/NEW_DESIGN/mobile/home.html
+++ b/3B-WEB/NEW_DESIGN/mobile/home.html
@@ -157,19 +157,19 @@
 				<ul class="menu-container scroll-x">
 					<li>
 						<a href="view-product-by-category.html">
-							<span class="frame-icon"><img src="../../assets/images/new-design/icons/cat-icon-1.png"></span>
+							<span class="frame-icon"><img src="../../assets/images/new-design/icons/cat-icon-11.png"></span>
 							Nội Thất
 						</a>
 					</li>
 					<li>
 						<a href="#">
-							<span class="frame-icon"><img src="../../assets/images/new-design/icons/cat-icon-2.png"></span>
+							<span class="frame-icon"><img src="../../assets/images/new-design/icons/cat-icon-12.png"></span>
 							Thời trang nữ
 						</a>
 					</li>
 					<li>
 						<a href="#">
-							<span class="frame-icon"><img src="../../assets/images/new-design/icons/cat-icon-3.png"></span>
+							<span class="frame-icon"><img src="../../assets/images/new-design/icons/cat-icon-13.png"></span>
 							Thời trang nam
 						</a>
 					</li>
@@ -490,7 +490,7 @@
 		<div class="featured-search container">
 			<div class="title">
 				<h3><img src="../../assets/images/new-design/icons/flat-search.png"> Tìm kiếm nổi bật</h3>
-				<a href="#"><img src="../../assets/images/new-design/icons/union.png"> Xem thêm</a>
+				<a href="#"><img src="../../assets/images/new-design/icons/union-2.png"> Xem thêm</a>
 			</div>
 			<div class="boxes scroll-x">
 				<div class="box">
@@ -582,13 +582,14 @@
 		<div class="recommend-p container">
 			<div class="title">
 				<h3><img src="../../assets/images/new-design/icons/idea.png"> Gợi ý hôm nay</h3>
+				<a href="#">Xem tất cả</a>
 			</div>
 			<div class="boxes wrap scroll-x">
 				<div class="box-p">
 					<div class="box-p-wrap">
 						<div class="box-p-img">
 							<a href="#"><img src="../../assets/images/img29.jpg"></a>
-							<span class="rating-label">-50%</span>
+							<span class="rating-title-label"><img src="../../assets/images/new-design/icons/hot-today-label.png"></span>
 						</div>
 						<div class="box-p-meta">
 							<div class="store-info">
@@ -599,13 +600,15 @@
 							</div>
 							<div class="p-name">
 								<a href="#"><h4 class="wrap-line twoline">Cây dương xỉ để bàn mini cùng cái tên dài vãi chưởng</h4></a>
-								<span class="p-price wrap-line w-break">1.125.000đ</span>
 							</div>
 							<div class="p-rating">
 								<img src="../../assets/images/new-design/icons/star.png">
 								<span class="point">4.0</span>
 								<span class="count">(200 ratings)</span>
+								<span class="rating-label-2">-50%</span>
 							</div>
+							<div class="p-price wrap-line w-break">1.125.000đ</div>
+							<div class="p-old wrap-line w-break">1.625.000đ</div>
 						</div>
 					</div>
 				</div><!-- /end product -->
@@ -614,7 +617,6 @@
 					<div class="box-p-wrap">
 						<div class="box-p-img">
 							<a href="#"><img src="../../assets/images/img29.jpg"></a>
-							<span class="rating-label">-50%</span>
 						</div>
 						<div class="box-p-meta">
 							<div class="store-info">
@@ -625,13 +627,16 @@
 							</div>
 							<div class="p-name">
 								<a href="#"><h4 class="wrap-line twoline">Cây dương xỉ để bàn mini cùng cái tên dài vãi chưởng</h4></a>
-								<span class="p-price wrap-line w-break">189,000đ - 195,000đ</span>
+								<span class="p-price wrap-line w-break"></span>
 							</div>
 							<div class="p-rating">
 								<img src="../../assets/images/new-design/icons/star.png">
 								<span class="point">4.0</span>
 								<span class="count">(200 ratings)</span>
+								<span class="rating-label-2">-50%</span>
 							</div>
+							<div class="p-price wrap-line w-break">189,000đ - 195,000đ</div>
+							<div class="p-old wrap-line w-break">199,000đ - 295,000đ</div>
 						</div>
 					</div>
 				</div><!-- /end product -->
@@ -640,7 +645,6 @@
 					<div class="box-p-wrap">
 						<div class="box-p-img">
 							<a href="#"><img src="../../assets/images/img30.jpg"></a>
-							<span class="rating-label">-50%</span>
 						</div>
 						<div class="box-p-meta">
 							<div class="store-info">
@@ -657,7 +661,10 @@
 								<img src="../../assets/images/new-design/icons/star.png">
 								<span class="point">4.0</span>
 								<span class="count">(200 ratings)</span>
+								<span class="rating-label-2">-50%</span>
 							</div>
+							<div class="p-price wrap-line w-break">100,989,000đ - 290,195,000đ</div>
+							<div class="p-old wrap-line w-break">100,989,000đ - 290,195,000đ</div>
 						</div>
 					</div>
 				</div><!-- /end product -->
@@ -666,7 +673,6 @@
 					<div class="box-p-wrap">
 						<div class="box-p-img">
 							<a href="#"><img src="../../assets/images/img30.jpg"></a>
-							<span class="rating-label">-50%</span>
 						</div>
 						<div class="box-p-meta">
 							<div class="store-info">
@@ -683,7 +689,10 @@
 								<img src="../../assets/images/new-design/icons/star.png">
 								<span class="point">4.0</span>
 								<span class="count">(200 ratings)</span>
+								<span class="rating-label-2">-50%</span>
 							</div>
+							<div class="p-price wrap-line w-break">189,000đ - 195,000đ</div>
+							<div class="p-old wrap-line w-break">199,000đ - 295,000đ</div>
 						</div>
 					</div>
 				</div><!-- /end product -->
@@ -692,7 +701,7 @@
 					<div class="box-p-wrap">
 						<div class="box-p-img">
 							<a href="#"><img src="../../assets/images/img29.jpg"></a>
-							<span class="rating-label">-50%</span>
+							
 						</div>
 						<div class="box-p-meta">
 							<div class="store-info">
@@ -709,7 +718,10 @@
 								<img src="../../assets/images/new-design/icons/star.png">
 								<span class="point">4.0</span>
 								<span class="count">(200 ratings)</span>
+								<span class="rating-label-2">-50%</span>
 							</div>
+							<div class="p-price wrap-line w-break">189,000đ - 195,000đ</div>
+							<div class="p-old wrap-line w-break">199,000đ - 295,000đ</div>
 						</div>
 					</div>
 				</div><!-- /end product -->
@@ -783,7 +795,7 @@
 			<ul>
 				<li>
 					<a href="../../index.html">
-						<span class="frame-icon"><img src="../../assets/images/new-design/icons-svg/home.svg"></span>
+						<span class="frame-icon"><img src="../../assets/images/new-design/icons-svg/home-2.svg"></span>
 						<span>Trang Chủ</span>
 					</a>
 				</li>
