--- a/3B-WEB/NEW_DESIGN/mobile/product-details.html
+++ b/3B-WEB/NEW_DESIGN/mobile/product-details.html
@@ -353,7 +353,7 @@
 						</div>
 					</div>
 					<div class="actions">
-						<a href="#" class="btn btn-gradient">Xem shop</a>
+						<a href="#" class="btn btn-normal">Xem shop</a>
 					</div>
 				</div><!-- /end box-head -->
 
@@ -475,7 +475,7 @@
 
 				<div class="total-price boxes">
 					<label>Total: <span>$124,99</span></label>
-					<button class="btn btn-gradient">Thêm 3 Sản Phẩm</button>
+					<button class="btn btn-normal">Thêm 3 Sản Phẩm</button>
 				</div>
 			</div>
 
@@ -1229,7 +1229,7 @@
 							</div>
 						</div>
 
-						<a href="shopping-cart.html" class="btn btn-gradient">Mua ngay</a>
+						<a href="shopping-cart.html" class="btn btn-normal">Mua ngay</a>
 					</div>
 				</div>
 			</div>
