--- a/3B-WEB/NEW_DESIGN/mobile/store-home.html
+++ b/3B-WEB/NEW_DESIGN/mobile/store-home.html
@@ -280,6 +280,7 @@
 								<div class="box-p-img">
 									<a href="#"><img src="../../assets/images/img29.jpg"></a>
 									<span class="rating-label">-50%</span>
+									<span class="rating-title-label"><img src="../../assets/images/new-design/icons/hot-today-label.png"></span>
 								</div>
 								<div class="box-p-meta">
 									<div class="store-info">
