--- a/3B-WEB/NEW_DESIGN/pc/home.html
+++ b/3B-WEB/NEW_DESIGN/pc/home.html
@@ -546,7 +546,7 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="title pull-left">
-						<h3><span><img src="../../assets/images/new-design/icons/lighting.png"></span> Giá sốc hôm nay</h3>
+						<h3><span><img src="../../assets/images/new-design/icons/fire-2.png"></span> Giá sốc hôm nay</h3>
 						<span class="flash-time">
 							<span class="hour">12</span> : 
 							<span class="minute">46</span> : 
@@ -569,7 +569,7 @@
 							<div class="product-info">
 								<h4 class="price">125,000 đ</h4>
 								<div class="product-sold">
-									<img class="icon-progress" src="../../assets/images/new-design/icons/fire.png">
+									<img class="icon-progress" src="../../assets/images/new-design/icons/fire-3.png">
 									<div class="progress">
 										<div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
 											<span class="sr-only">Đã bán: 30/30</span>
@@ -602,7 +602,7 @@
 							<div class="product-info">
 								<h4 class="price">125,000 đ</h4>
 								<div class="product-sold">
-									<img class="icon-progress" src="../../assets/images/new-design/icons/fire.png">
+									<img class="icon-progress" src="../../assets/images/new-design/icons/fire-3.png">
 									<div class="progress">
 										<div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
 											<span class="sr-only">Đã bán: 12/30</span>
@@ -622,7 +622,7 @@
 							<div class="product-info">
 								<h4 class="price">125,000 đ</h4>
 								<div class="product-sold">
-									<img class="icon-progress" src="../../assets/images/new-design/icons/fire.png">
+									<img class="icon-progress" src="../../assets/images/new-design/icons/fire-3.png">
 									<div class="progress">
 										<div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 30%">
 											<span class="sr-only">Đã bán: 10/30</span>
@@ -642,7 +642,7 @@
 							<div class="product-info">
 								<h4 class="price">125,000 đ</h4>
 								<div class="product-sold">
-									<img class="icon-progress" src="../../assets/images/new-design/icons/fire.png">
+									<img class="icon-progress" src="../../assets/images/new-design/icons/fire-3.png">
 									<div class="progress">
 										<div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 10%">
 											<span class="sr-only">Đã bán: 1/30</span>
@@ -662,7 +662,7 @@
 							<div class="product-info">
 								<h4 class="price">125,000 đ</h4>
 								<div class="product-sold">
-									<img class="icon-progress" src="../../assets/images/new-design/icons/fire.png">
+									<img class="icon-progress" src="../../assets/images/new-design/icons/fire-3.png">
 									<div class="progress">
 										<div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
 											<span class="sr-only">Đã bán: 12/30</span>
@@ -808,8 +808,7 @@
 		<div class="hot-today second margin-b20 hide-on-mobile">
 			<div class="content-wrapper container">
 				<div class="head-title">
-					<h3 class="txt_upercase"><img class="width-24 show-on-mobile" src="../../assets/images/new-design/icons/sun.png"> Hàng hot hôm nay</h3>
-					<a href="#" class="show-on-mobile">Xem thêm</a>
+					<h3 class="txt_upercase"><img src="../../assets/images/new-design/icons/bg-title-3.png"></h3>
 				</div>
 				<div class="scroll-on-mobile">
 					<div class="row">
