3B - update style :wq asdsd asd a ewer  we  r  we  we   sd    fsd

--- a/3B-WEB/index.html
+++ b/3B-WEB/index.html
@@ -21,8 +21,18 @@
 	<div class="wrapper" style="width:90%;margin:50px auto;">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-4">
-					<h1>OLD DESIGN</h1>
+				<div class="col-md-6">
+					<h1>PC</h1>
+					<div>
+						<ul>
+							<li><a href="NEW_DESIGN/pc/home.html">Home</a></li>
+							<li><a href="view-product-secondhand.html">Secondhand</a></li>
+							<li><a href="favorite-product.html">Favorite Products</a></li>
+							<li><a href="store-follower.html">Store Follower</a></li>
+							<li><a href="search-product-top.html">Search Product Top</a></li>
+							<li><a href="view-product-list-rating.html">Product List Rating</a></li>
+						</ul>
+					</div>
 					<div class="search">
 						<h5>SEARCH</h5>
 						<ul>
@@ -36,7 +46,6 @@
 					<div class="pages">
 						<h5>PAGES</h5>
 						<ul>
-							<li><a href="home.html">Homepage</a></li>
 							<li><a href="product-details.html">Product Details</a></li>
 							<li><a href="product-details-disabled-order.html">Product Details Disabled Order Button</a></li>
 							<li><a href="join-to-buy.html">Join To Buy</a></li>
@@ -95,19 +104,8 @@
 						</ul>
 					</div>
 				</div>
-				<div class="col-md-4">
-					<h1>NEW DESIGN - PC</h1>
-					<ul>
-						<li><a href="NEW_DESIGN/pc/home.html">Home</a></li>
-						<li><a href="view-product-secondhand.html">Secondhand</a></li>
-						<li><a href="favorite-product.html">Favorite Products</a></li>
-						<li><a href="store-follower.html">Store Follower</a></li>
-						<li><a href="search-product-top.html">Search Product Top</a></li>
-						<li><a href="view-product-list-rating.html">Product List Rating</a></li>
-					</ul>
-				</div>
-				<div class="col-md-4">
-					<h1>NEW DESIGN - SP</h1>
+				<div class="col-md-6">
+					<h1>SP</h1>
 					<ul>
 						<li><a href="NEW_DESIGN/mobile/home.html">Home</a></li>
 						<li><a href="NEW_DESIGN/mobile/search-store.html">Search Store</a></li>
