3B - update style homepage

--- a/3B-WEB/NEW_DESIGN/pc/home.html
+++ b/3B-WEB/NEW_DESIGN/pc/home.html
@@ -54,11 +54,11 @@
 						<div class="search-box">
 							<div class="input-group margin">
 								<div class="search-control">
-									<input type="text" class="form-control" placeholder="Search Product, Brand...">
+									<input type="text" class="form-control" placeholder="Tìm kiếm sản phẩm">
 									<!-- BEGIN ADVANCE SEARCH -->
 									<div class="advance-search">
 										<!-- BEGIN SEARCH BY -->
-										<div class="search-by">
+										<!-- <div class="search-by">
 											<div class="row">
 												<div class="col-md-12">
 													<h4>Search By</h4>
@@ -72,7 +72,7 @@
 													<span class="search-product">Search product</span>
 												</div>
 											</div>
-										</div>
+										</div> -->
 										<!-- /END SEARCH BY -->
 
 										<!-- BEGIN SEARCH HISTORY -->
@@ -706,7 +706,7 @@
 		</div>
 		<!-- /END HOT TODAY -->
 
-		<div class="recommend-products margin-b20">
+		<div class="recommend-products saleoff margin-b20">
 			<div class="content-wrapper bg-white pad-20 br-8 container">
 				<div class="head-title">
 					<h3 class="txt_upercase"><img class="width-24" src="../../assets/images/new-design/icons/tag.png"> Sale off</h3>
@@ -723,20 +723,20 @@
 							</div>
 							<div class="p-meta">
 								<div class="store-info">
-									<div class="store-name">
+									<div class="store-name custom-w75">
 										<img src="../../assets/images/img30.jpg">
 										<h5 class="wrap-line">Clever Hippo cùng cái tên siêu dài</h5>
+									</div>
+									<div class="rating">
+										<img src="../../assets/images/new-design/icons/star.png">
+										<span class="point">4.0</span>
 									</div>
 								</div>
 								<div class="p-name">
 									<a href="#"><h4 class="wrap-line twoline">Cây dương xỉ để bàn mini cùng cái tên dài vãi chưởng</h4></a>
 									<span class="p-price wrap-line">1,189,000đ - 2,195,000đ</span>
 								</div>
-								<div class="rating">
-									<img src="../../assets/images/new-design/icons/star.png">
-									<span class="point">4.0</span>
-									<span class="count">(200 ratings)</span>
-								</div>
+								<div class="p-price sale wrap-line">120,189,000đ - 220,195,000đ</div>
 							</div>
 						</div>
 						<!-- /END PRODUCT ITEM -->
@@ -750,20 +750,20 @@
 							</div>
 							<div class="p-meta">
 								<div class="store-info">
-									<div class="store-name">
+									<div class="store-name custom-w75">
 										<img src="../../assets/images/img29.jpg">
 										<h5 class="wrap-line">Tên cửa hàng</h5>
+									</div>
+									<div class="rating">
+										<img src="../../assets/images/new-design/icons/star.png">
+										<span class="point">4.0</span>
 									</div>
 								</div>
 								<div class="p-name">
 									<a href="#"><h4 class="wrap-line twoline">Cây dương xỉ để bàn mini cùng cái tên dài vãi chưởng</h4></a>
 									<span class="p-price wrap-line">122.125.000 đ</span>
-								</div>
-								<div class="rating">
-									<img src="../../assets/images/new-design/icons/star.png">
-									<span class="point">4.0</span>
-									<span class="count">(200 ratings)</span>
-								</div>
+								</div> 
+								<div class="p-price sale wrap-line">220,195,000đ</div>
 							</div>
 						</div>
 						<!-- /END PRODUCT ITEM -->
@@ -777,20 +777,20 @@
 							</div>
 							<div class="p-meta">
 								<div class="store-info">
-									<div class="store-name">
+									<div class="store-name custom-w75">
 										<img src="../../assets/images/store-logo.png">
 										<h5 class="wrap-line">Tên cửa hàng siêu ngắn</h5>
+									</div>
+									<div class="rating">
+										<img src="../../assets/images/new-design/icons/star.png">
+										<span class="point">4.0</span>
 									</div>
 								</div>
 								<div class="p-name">
 									<a href="#"><h4 class="wrap-line twoline">Cây dương xỉ</h4></a>
 									<span class="p-price wrap-line">100,189,000đ - 200,195,000đ</span>
 								</div>
-								<div class="rating">
-									<img src="../../assets/images/new-design/icons/star.png">
-									<span class="point">4.0</span>
-									<span class="count">(200 ratings)</span>
-								</div>
+								<div class="p-price sale wrap-line">120,189,000đ - 220,195,000đ</div>
 							</div>
 						</div>
 						<!-- /END PRODUCT ITEM -->
@@ -804,20 +804,20 @@
 							</div>
 							<div class="p-meta">
 								<div class="store-info">
-									<div class="store-name">
+									<div class="store-name custom-w75">
 										<img src="../../assets/images/store-logo.png">
 										<h5 class="wrap-line">Tên</h5>
+									</div>
+									<div class="rating">
+										<img src="../../assets/images/new-design/icons/star.png">
+										<span class="point">4.0</span>
 									</div>
 								</div>
 								<div class="p-name">
 									<a href="#"><h4 class="wrap-line twoline">Cây dương xỉ dài</h4></a>
 									<span class="p-price">1.125.000 đ</span>
 								</div>
-								<div class="rating">
-									<img src="../../assets/images/new-design/icons/star.png">
-									<span class="point">4.0</span>
-									<span class="count">(200 ratings)</span>
-								</div>
+								<div class="p-price sale wrap-line">220,195,000đ</div>
 							</div>
 						</div>
 						<!-- /END PRODUCT ITEM -->
@@ -831,20 +831,20 @@
 							</div>
 							<div class="p-meta">
 								<div class="store-info">
-									<div class="store-name">
+									<div class="store-name custom-w75">
 										<img src="../../assets/images/store-logo.png">
 										<h5 class="wrap-line">Superrrr</h5>
+									</div>
+									<div class="rating">
+										<img src="../../assets/images/new-design/icons/star.png">
+										<span class="point">4.0</span>
 									</div>
 								</div>
 								<div class="p-name">
 									<a href="#"><h4 class="wrap-line twoline">Tên khác nhưng dài vừa vừa</h4></a>
 									<span class="p-price wrap-line">100,189,000đ - 200,195,000đ</span>
 								</div>
-								<div class="rating">
-									<img src="../../assets/images/new-design/icons/star.png">
-									<span class="point">4.0</span>
-									<span class="count">(200 ratings)</span>
-								</div>
+								<div class="p-price sale wrap-line">120,189,000đ - 220,195,000đ</div>
 							</div>
 						</div>
 						<!-- /END PRODUCT ITEM -->
@@ -858,20 +858,20 @@
 							</div>
 							<div class="p-meta">
 								<div class="store-info">
-									<div class="store-name">
+									<div class="store-name custom-w75">
 										<img src="../../assets/images/store-logo.png">
 										<h5 class="wrap-line">Superrrr Saleeeee</h5>
+									</div>
+									<div class="rating">
+										<img src="../../assets/images/new-design/icons/star.png">
+										<span class="point">4.0</span>
 									</div>
 								</div>
 								<div class="p-name">
 									<a href="#"><h4 class="wrap-line twoline">Tên khác nhưng dài vừa vừa</h4></a>
 									<span class="p-price wrap-line">125.000 đ</span>
 								</div>
-								<div class="rating">
-									<img src="../../assets/images/new-design/icons/star.png">
-									<span class="point">4.0</span>
-									<span class="count">(100000 ratings)</span>
-								</div>
+								<div class="p-price sale wrap-line">220,189,đ</div>
 							</div>
 						</div>
 						<!-- /END PRODUCT ITEM -->
